Enable new Java 11 code in OLParser